# desertation_fake_news

./: .gitignore  API_USAGE_GUIDE.md  DATASET_PREPROCESSING_README.md  Makefile  Pilot Report_afkar_new.docx  README.md  articles.json  download_and_preprocess.py  env.example  liar_report.md  make.bat  pyproject.toml  requirements.txt  setup_datasets.py  setup_uv.py  start_server.py  stop_server.py
app/: cache_store.py  config.py  data_utils.py  dataset_api.py  dataset_manager.py  eval_progress.py  feedback_api.py  main.py  model_service.py  model_service_instance.py  model_service_v2.py  preprocessing.py  reports.py
datasets/: datasets_metadata.json
datasets/fakenewsnet/: README.md
datasets/politifact/: politifact_data.json
fake-news-frontend/: package-lock.json  package.json
fake-news-frontend/src/: App.jsx  index.css
fake-news-frontend/src/components/charts/: BaseChart.jsx
fake-news-frontend/src/components/dashboard/: EvaluationSummary.jsx  RecentReports.jsx  SystemStatus.jsx
fake-news-frontend/src/components/layout/: ErrorBoundary.jsx
fake-news-frontend/src/components/ui/: Button.jsx  Card.jsx  EmptyState.jsx  LoadingSpinner.jsx  MetricCard.jsx  ProgressRing.jsx  StatsGrid.jsx  Toaster.jsx
fake-news-frontend/src/pages/: Analysis.jsx  Dashboard.jsx  Datasets.jsx  Evaluation.jsx  Explainability.jsx
fake-news-frontend/src/pages/Evaluation/components/: AbstentionPanel.jsx  BaselinesPanel.jsx  CalibrationSummary.jsx  ConfusionMatrix.jsx  CurvesPanel.jsx  FairnessTable.jsx  Glossary.jsx  MetricsCards.jsx  SignificancePanel.jsx  TemporalStability.jsx
fake-news-frontend/src/services/: api.js
fake-news-frontend/src/stores/: appStore.js  notifyStore.js
processed_data/: download_report_20250717_092650.json  download_report_20250717_092715.json  download_report_20250717_092856.json  full_pipeline_background_report_politifact_20250717_094508.md  liar_processed_label_mapping.json  politifact_processed_label_mapping.json  preprocessing_report_liar_20250717_092734.json  preprocessing_report_liar_20250717_093533.md  preprocessing_report_politifact_20250717_092659.json  preprocessing_summary_liar_20250717_092734.txt  preprocessing_summary_politifact_20250717_092659.txt
project_improvement_plan/: validation-script.py
scripts/: debug_model_labels.py  demo_api.py  download_isot.py  download_isot_simple.py  run_dissertation_pipeline.py  test_api_integration.py  test_phase1_integration.py  test_pretrained.py  test_without_isot.py  train_liar.py  verify_model_fix.py
